<?php

namespace App\Models;

// use Illuminate\Contracts\Auth\MustVerifyEmail;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Relations\BelongsTo;
use Illuminate\Database\Eloquent\Relations\HasMany;
use Illuminate\Foundation\Auth\User as Authenticatable;
use Illuminate\Notifications\Notifiable;

class User extends Authenticatable
{
    /** @use HasFactory<\Database\Factories\UserFactory> */
    use HasFactory, Notifiable;

    /**
     * The attributes that are mass assignable.
     *
     * @var list<string>
     */
    protected $fillable = [
        'name',
        'email',
        'password',
        'role_id',
    ];

    /**
     * The attributes that should be hidden for serialization.
     *
     * @var list<string>
     */
    protected $hidden = [
        'password',
        'remember_token',
    ];

    /**
     * Get the attributes that should be cast.
     *
     * @return array<string, string>
     */
    protected function casts(): array
    {
        return [
            'email_verified_at' => 'datetime',
            'password' => 'hashed',
        ];
    }

    /**
     * Get the role that owns the user.
     */
    public function role(): BelongsTo
    {
        return $this->belongsTo(Role::class);
    }

    /**
     * Check if the user has a specific role.
     */
    public function hasRole(string $roleName): bool
    {
        return $this->role->name === $roleName;
    }

    /**
     * Get the exams where the user is a candidate.
     */
    public function candidateExams(): HasMany
    {
        return $this->hasMany(Exam::class, 'candidate_id');
    }

    /**
     * Get the exams where the user is an inspector.
     */
    public function inspectorExams(): HasMany
    {
        return $this->hasMany(Exam::class, 'inspector_id');
    }

    /**
     * Get the course material progress records for the user.
     */
    public function courseMaterialProgress(): HasMany
    {
        return $this->hasMany(CandidateCourseMaterialProgress::class);
    }

    /**
     * Get the notifications for the user.
     */
    public function customNotifications(): HasMany
    {
        return $this->hasMany(Notification::class);
    }
}
